   src/project.c:
   Add possibility to detect the indentation width from the file content
   (not supported if indentation type is tabs only).
 * plugins/splitwindow.c:
   Enable code folding in splitview window (based on a patch by Matthew
   Brush, thanks! - closes #3097780).
   Fix confusing terminology in Split Window plugin menu labels (patch
   by Matthew Brush - closes #2796316).


2011-03-25  Colomban Wendling  <colomban(at)geany(dot)org>

 * data/filetypes.vala:
   Update Vala keywords (based on a patch from Matthew Brush, thanks).
 * data/document.c:
   Small code cleanups.


2011-03-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/filebrowser.c:
   Add history to filter entry.
 * src/keybindings.c, src/vte.c:
   Add fixed shortcuts for VTE copy (Ctrl-Shift-C) and paste
   (Ctrl-Shift-V).
 * src/keybindings.c:
   Make VTE copy/paste shortcuts work if 'Override Geany
   keybindings' is not set.


2011-03-24  Colomban Wendling  <colomban(at)geany(dot)org>

 * doc/geany.txt, doc/geany.html:
   Update the documentation to talk about real-time tag parsing.
 * doc/geany.txt, doc/geany.html, src/callbacks.c, src/callbacks.h,
   src/document.c, src/document.h, src/geanyentryaction.c,
   src/search.c, src/toolbar.c, src/ui_utils.c, src/ui_utils.h:
   Make Shift-Enter in search dialog and toolbar search entries search
   backwards.
 * plugins/filebrowser.c, plugins/saveactions.c, src/callbacks.c,
   src/dialogs.c, src/document.c, src/document.h, src/editor.c,
   src/encodings.c, src/filetypes.c, src/highlighting.c, src/log.c,
   src/main.c, src/plugins.c, src/printing.c, src/project.c, src/search.c,
   src/socket.c, src/toolbar.c, src/utils.c, src/utils.h:
   Improve usage of G_LIKELY() and G_UNLIKELY() macros.


2011-03-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/main.c:
   Make --ft-names list filetypes alphabetically.
 * plugins/filebrowser.c:
   Allow multiple file filters to be separated by a space for